# Mantis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_flags.txt  go.sh
.cache/clangd/index/: main.cc.051106B4F33D7643.idx  mantis.cc.3E390C8223E8527D.idx  mantis.h.2B9CA43DA1EB50E9.idx
examples/simple_server/src/: main.cc
include/mantis/: mantis.h
include/mantis/common/: types.h
include/mantis/platform/: platform.h
include/mantis/server/: server.h
mantis/src/: mantis.cc
mantis/src/platform/: platform_linux.cc
mantis/src/server/: server.cc
server/src/: server.cc
server/src/http/: http_defines.h  http_utils.cc  request.cc  request.h  response.cc  response.h
server/src/http/httpserver/: httpserver.cc  httpserver.h  httpserver.inl  httpserver_addr.cc
